    - Die if no maintainer_name, uploader_name or key_id is specified.
    - Set and unset $main::binNMU_name in the main loop, rather than when
      opening and closing the package log.  In consequence, open_pkg_log
      now needs the package name only, and close_pkg_log does not need
      the package name passing.
    - build: Set $firstline to "" to quell a warning.
  * Sbuild.pm: Add basename function.
  * Sbuild/Chroot.pm:
    - New perl module for chroot operations.  It contains the functions
      begin_session, end_session, log_command, get_command_internal,
      get_command, run_command, exec_command, get_apt_command_internal,
      get_apt_command and run_apt_command.
    - Don't export init and log_command.
    - Don't hardcode a list of chroots; use a glob to search for chroot-*
      instead.  This allows any distribution name to be specified with -d.
    - Add an "APT Options" attribute to the chroot hash, to replace
      $main::chroot_apt_options.
    - Use STDERR instead of PLOG (which may not be available).
    - Replace $main::debug with $Sbuild::Conf::debug.
    - Replace $main::username with $Sbuild::Conf::username.
    - begin_session takes the distribution as its first argument, rather
      than using $main::distribution.
    - Don't use $main::chroot_dir.  Add the build paths as 'Build Location',
      'Srcdep Lock Dir' and 'Install Lock' to the chroot metadata.
  * Sbuild/Conf.pm:
    - New perl module for configuration variables.  It reads the system
      and user configuration.
    - Add $debug.
    - Add $username.
    - Add $cwd, $nolog and $verbose.  They exported and used by the other
      modules in place of the variables in the main package.
    - Add and export $avg_time_db, $avg_space_db, $maintainer_name,
      $uploader_name and $key_id.
  * Sbuild/Log.pm:
    - New perl module for logging.  It contains the functions open_log,
      close_log, open_pkg_log, close_pkg_log, add_time_entry,